# ttyui

./: .gitignore  CMakeLists.txt  build-debug.sh  build.sh  run-ttyui-weather.sh  todo.md
examples/ttyui-weather/: CMakeLists.txt  ui-design.md
examples/ttyui-weather/src/: main.c
include/: box.h  display-buffer.h  event.h  ttyui-context.h  ttyui.h
include/notifications/: notification-manager.h  notification-queue.h  notification.h
include/rendering/: box.h  cursor.h  display-buffer.h
include/rendering/cell/: cell-style-manager.h  cell.h
include/types/: color.h  vector2.h
include/widgets/: widget-box.h  widget-manager.h  widget.h
src/: box.c  cursor.c  display-buffer.c  event.c  ttyui-context.c  ttyui.c
src/notifications/: notification-manager.c  notification-queue.c  notification.c
src/rendering/: box.c  cursor.c  display-buffer.c
src/rendering/cell/: cell-style-manager.c  cell.c
src/types/: vector2.c
src/widgets/: widget-box.c  widget-manager.c
